[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Gorbachev <a.gorbachev@cryptology.com>"]
readme = "README.md"

packages = [{include = "leetcode", from = "src"}]

[tool.poetry.dependencies]
python = "^3.14"
pydantic = "^2.12.2"
pytest = "^8.4.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.14.0"
mypy = "^1.18.2"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "Q",
    "UP",
    "I",
    "ASYNC",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
